--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,15 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "date-fns": "^2.23.0",
-    "formik": "^2.2.9",
     "axios": "^0.21.1",
     "chart.js": "^3.5.1",
+    "date-fns": "^2.23.0",
+    "formik": "^2.2.9",
     "modern-normalize": "^1.1.0",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
+    "react-media": "^1.10.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
