--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "eject": "react-scripts eject",
     "netlify": "netlify",
     "predeploy": "npm run build",
-    "deploy": "netlify deploy -p"
+    "deploy": "netlify deploy"
   },
   "eslintConfig": {
     "extends": [
